--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -1,3 +1,30 @@
-body{
-    background-color: salmon;
+body {
+    background-color: aliceblue;
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Menjadikan tinggi body setara dengan tinggi viewport */
+    margin: 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Efek bayangan */
+}
+
+h1 {
+    color: #333;
+    text-align: center;
+}
+
+p {
+    color: #555;
+    text-align: center;
+}
+
+a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
